[package]
name = "rage_quit"
version = "0.1.0"
edition = "2021"
description = "Stupid forwards for panic and catch_unwind"
authors = ["Christopher Regali <christopher.regali@vdop.org>"]
license = "MIT"
repository = "https://github.com/ChrisRega/rage_quit"
homepage = "https://github.com/ChrisRega/rage_quit"
documentation = "https://docs.rs/rage_quit"
readme = "README.md"

[dependencies]
